--- a/.github/workflows/cmake-tests.yml
+++ b/.github/workflows/cmake-tests.yml
@@ -34,30 +34,22 @@ jobs:
           cd /usr/src/gtest
           sudo cmake .
           sudo make
-
-          if [ -f lib/libgtest.a ] && [ -f lib/libgtest_main.a ]; then
-            sudo cp lib/libgtest.a lib/libgtest_main.a /usr/lib
-          elif [ -f libgtest.a ] && [ -f libgtest_main.a ]; then
-            sudo cp libgtest.a libgtest_main.a /usr/lib
-          else
-            echo "Error: Static libraries not found in /usr/src/gtest or /usr/src/gtest/lib after build."
-            ls -la /usr/src/gtest
-            ls -la /usr/src/gtest/lib || true
-            exit 1
-          fi
+          sudo cp *.a /usr/lib  # Ensure libraries are copied
 
       - name: Install GTest (macOS)
         if: runner.os == 'macOS'
         run: |
           brew update
           brew install googletest cmake
+          sudo mkdir -p /usr/local/lib
+          sudo cp /usr/local/Cellar/googletest/*/lib/*.a /usr/local/lib # Ensure libraries are in the correct path
 
       - name: Configure CMake
         run: |
           if [ "$RUNNER_OS" = "Windows" ]; then
             cmake -S . -B build -DCMAKE_PREFIX_PATH="C:/gtest-install"
           else
-            cmake -S . -B build
+            cmake -S . -B build -DCMAKE_PREFIX_PATH="/usr/local;/usr"
           fi
         shell: bash
 
