--- a/.github/workflows/cmake-tests.yml
+++ b/.github/workflows/cmake-tests.yml
@@ -32,7 +32,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtest-dev cmake
           cd /usr/src/gtest
-          sudo cmake . -DBUILD_SHARED_LIBS=ON  # Explicitly set shared libs as needed
+          sudo cmake . -DBUILD_SHARED_LIBS=OFF  # Ensure static libraries are built
           sudo make
           if [ -f libgtest.a ] && [ -f libgtest_main.a ]; then
             sudo cp libgtest*.a /usr/lib  # Copy both static libraries
